--- a/inst/rmarkdown/templates/my-slides/skeleton/assets/title-page.Rmd
+++ b/inst/rmarkdown/templates/my-slides/skeleton/assets/title-page.Rmd
@@ -9,12 +9,12 @@ class: title-slide
 <br>
 
 .title-small[
-`r icons::icon_style(icons::fontawesome("envelope",style = "solid"),scale=.8,fill="#00acee")`  [g.baio@ucl.ac.uk](mailto:g.baio@ucl.ac.uk)
-`r icons::icon_style(icons::fontawesome("firefox"),scale=.8,fill="#EA7600")`  [https://gianluca.statistica.it/](https://gianluca.statistica.it/)
-`r icons::icon_style(icons::fontawesome("firefox"),scale=.8,fill="#EA7600")`  [https://egon.stats.ucl.ac.uk/research/statistics-health-economics/](https://egon.stats.ucl.ac.uk/research/statistics-health-economics/)
-`r icons::icon_style(icons::fontawesome("github"),scale=.8,fill="black")`  [https://github.com/giabaio](https://github.com/giabaio)
-`r icons::icon_style(icons::fontawesome("github"),scale=.8,fill="black")`  [https://github.com/StatisticsHealthEconomics](https://github.com/StatisticsHealthEconomics)
-`r icons::icon_style(icons::fontawesome("mastodon"),scale=.8,fill="#563acc")`  [@gianlubaio@mas.to](https://mas.to/@gianlubaio) &nbsp;&nbsp;  `r fontawesome::fa("x-twitter",fill="black",height="0.8em")` [@gianlubaio](https://twitter.com/gianlubaio)       
+`r fontawesome::fa("envelope",fill="#00acee",height="0.8em")`  [g.baio@ucl.ac.uk](mailto:g.baio@ucl.ac.uk)
+`r fontawesome::fa("firefox",fill="#EA7600",height="0.8em")`  [https://gianluca.statistica.it/](https://gianluca.statistica.it/)
+`r fontawesome::fa("firefox",fill="#EA7600",height="0.8em")` [https://egon.stats.ucl.ac.uk/research/statistics-health-economics/](https://egon.stats.ucl.ac.uk/research/statistics-health-economics/)
+`r fontawesome::fa("github",fill="black",height="0.8em")`  [https://github.com/giabaio](https://github.com/giabaio)
+`r fontawesome::fa("github",fill="black",height="0.8em")`  [https://github.com/StatisticsHealthEconomics](https://github.com/StatisticsHealthEconomics)
+`r fontawesome::fa("mastodon",fill="#563acc",height="0.8em")`  [@gianlubaio@mas.to](https://mas.to/@gianlubaio) &nbsp;&nbsp;  `r fontawesome::fa("x-twitter",fill="black",height="0.8em")` [@gianlubaio](https://twitter.com/gianlubaio)       
 ]
 
 <br>
@@ -36,7 +36,7 @@ Can also add sticky notes:
 -->
 `r postit(text=paste0('Check out our departmental podcast "Random Talks" on Soundcloud!', add_podcast()),top="75%",left="2.5%",height="6.3em",width="6.3em",rotate="-8deg")`
 
-`r postit(text=paste0("Follow our departmental social media accounts", add_twitter(url="https://twitter.com/stats_ucl",title="@stats_UCL",fill="#00acee"), add_linkedin(url="https://www.linkedin.com/in/statistical-science-ucl-906b9a201",title="LinkedIn"),add_instagram(url="https://www.instagram.com/ucl.stats/",title="Instagram")),top="53%",left="6.5%",height="6.3em",width="6.3em")`
+`r postit(text=paste0("Follow our departmental social media accounts", add_x(url="https://twitter.com/stats_ucl",title="@stats_UCL",fill="black"), add_linkedin(url="https://www.linkedin.com/in/statistical-science-ucl-906b9a201",title="LinkedIn"),add_instagram(url="https://www.instagram.com/ucl.stats/",title="Instagram")),top="53%",left="6.5%",height="6.3em",width="6.3em")`
 
 <!-- This adds a footer (optional and with other possibilities...) 
      For example, can use `r samptux()` to add the Samp Tux log,
