--- a/inst/quarto/gb-slides.qmd
+++ b/inst/quarto/gb-slides.qmd
@@ -20,7 +20,7 @@ url2: '`r fontawesome::fa("github",fill="black",height="0.8em")`  [https://githu
 url3: '`r fontawesome::fa("mastodon",fill="#563acc",height="0.8em")`  [@gianlubaio@mas.to](https://mas.to/@gianlubaio) &nbsp;&nbsp;  `r fontawesome::fa("x-twitter",fill="black",height="0.8em")` [@gianlubaio](https://twitter.com/gianlubaio)'
 orchid: 
 postit1: 'Check out our departmental podcast "Random Talks" on Soundcloud! [{{< fa brands soundcloud >}}](https://soundcloud.com/uclsound/sets/sample-space){style="color: #ff7700;" title="Listen to our podcast"}'
-postit2: 'Follow our departmental social media accounts [{{< fa brands x-twitter >}}](url="https://twitter.com/stats_ucl){style="color: #000000;" title="Follow us on X"} [{{< fa brands linkedin >}}](https://www.linkedin.com/in/statistical-science-ucl-906b9a201){style="color: #0A66C2;" title="Follow us on LinkedIn"} [{{< fa brands instagram >}}](https://www.instagram.com/ucl.stats/){style="color: #8a3ab9;" title="Follow us on +Instagram"} + magazine ["Sample Space"](https://sample-space.org/){style="color: #434252;" title="Read our online magazine"}'
+postit2: 'Follow our departmental social media accounts [{{< fa brands x-twitter >}}](url="https://twitter.com/stats_ucl){style="color: #000000;" title="Follow us on X"} [{{< fa brands linkedin >}}](https://www.linkedin.com/in/statistical-science-ucl-906b9a201){style="color: #0A66C2;" title="Follow us on LinkedIn"} [{{< fa brands instagram >}}](https://www.instagram.com/ucl.stats/){style="color: #8a3ab9;" title="Follow us on Instagram"} + magazine ["Sample Space"](https://sample-space.org/){style="color: #434252;" title="Read our online magazine"}'
 
 #' Computed attributes (from other parts of the yml file)
 date-as-string: '`r ifelse((rmarkdown::metadata$date)!="",(rmarkdown::metadata$date |> as.Date(format("%e %B %Y")) |> format("%e %B %Y")),(Sys.Date() |> format("%e %B %Y")))`'
@@ -132,12 +132,12 @@ Can add vertical space using `fragments`
 
 We can also include maths, using standard $\rm\LaTeX$:
 
-$$\class{myblue}{p(y\mid\mathcal{D}) = \int p(y\mid\bm\theta)p(\boldsymbol\theta\mid\mathcal{D})d\boldsymbol\theta} $$
+$$\class{italian-green}{p(y\mid\mathcal{D}) = \int p(y\mid\bm\theta)p(\boldsymbol\theta\mid\mathcal{D})d\boldsymbol\theta} $$
 
 To use colours with $\rm\LaTeX$, needs a little hack: `$\class{color}{expression}$`
 
 You can define a probabilistic assumption as
-[$$y \mid \bm\theta \sim \dpois(\bm\theta)$$]{.myblue}
+[$$y \mid \bm\theta \sim \dpois(\bm\theta)$$]{.spanish-red}
 but in line it would look like this $\color{MidnightBlue}{y\sim \dnorm(\mu,\sigma^2)}$ 
 
 These use the predefined $\rm\LaTeX$ macros, saved in the file [`latex_macros.html`](latex_macros.html). More can be (re)defined by simply adding to the file, which gets pre-loaded at the beginning of the resulting `.html` output
@@ -530,6 +530,15 @@ The next few slides will transition using the `slide` transition
 Learn more: [Slide Transitions](https://quarto.org/docs/presentations/revealjs/advanced.html#slide-transitions)
 :::
 
+## A long, scrollable table 
+### Using `fragments`...
+
+::: {style="height: 80%; overflow: auto; font-size: .65em;"}
+```{r}
+knitr::kable(mtcars)
+```
+:::
+
 ## Tabsets {transition="slide" .smaller}
 
 ::: panel-tabset
@@ -548,11 +557,12 @@ ggplot(mtcars, aes(hp, mpg, color = am)) +
                                          continuous = TRUE)
 ```
 
-### Data
+### Data 
 
 ```{r}
 knitr::kable(mtcars)
 ```
+
 :::
 
 ::: footer
