--- a/inst/quarto/gb-slides.qmd
+++ b/inst/quarto/gb-slides.qmd
@@ -25,8 +25,8 @@ url1: '`r fontawesome::fa("firefox",fill="#EA7600",height="0.8em")` [https://gia
 url2: '`r fontawesome::fa("github",fill="black",height="0.8em")`  [https://github.com/giabaio](https://github.com/giabaio) &nbsp; `r fontawesome::fa("github",fill="black",height="0.8em")`  [https://github.com/StatisticsHealthEconomics](https://github.com/StatisticsHealthEconomics)'
 url3: '`r fontawesome::fa("mastodon",fill="#563acc",height="0.8em")`  [\@gianlubaio@mas.to](https://mas.to/@gianlubaio) &nbsp;&nbsp;  `r fontawesome::fa("x-twitter",fill="black",height="0.8em")` [\@gianlubaio](https://twitter.com/gianlubaio)'
 orchid: 
-postit1: 'Check out our departmental podcast "Random Talks" on Soundcloud! [{{< fa brands soundcloud >}}](https://soundcloud.com/uclsound/sets/sample-space){style="color: #ff7700;" title="Listen to our podcast"}'
-postit2: 'Follow our departmental social media accounts [{{< fa brands x-twitter >}}](url="https://twitter.com/stats_ucl){style="color: #000000;" title="Follow us on X"} [{{< fa brands linkedin >}}](https://www.linkedin.com/in/statistical-science-ucl-906b9a201){style="color: #0A66C2;" title="Follow us on LinkedIn"} [{{< fa brands instagram >}}](https://www.instagram.com/ucl.stats/){style="color: #8a3ab9;" title="Follow us on Instagram"} + magazine ["Sample Space"](https://sample-space.org/){style="color: #434252;" title="Read our online magazine"}'
+postit1: true
+postit2: true
 
 
 #' Computed attributes (from other parts of the yml file)
