Restructure the title-page to use yml-like lists for url, github and social parameters

--- a/inst/quarto/gb-slides.qmd
+++ b/inst/quarto/gb-slides.qmd
@@ -20,7 +20,7 @@ thank-you:
 bibliography: "/home/gianluca/Dropbox/Rstuff/Website/publications/mypubs.bib"
 
 
-#' Fixed attributes (don't need to, but can change these)
+#' (Semi-)Fixed attributes (don't need to, but can change these)
 author: 
   - name: "**Gianluca Baio**"
 institute:  "Department of Statistical Science &nbsp; | &nbsp; University College London"
