--- a/inst/quarto/gb-slides.qmd
+++ b/inst/quarto/gb-slides.qmd
@@ -12,7 +12,9 @@ shortconference: "A shorter title of the conference"
 postit: 
    random-talks: true
    social-media: true
-slidesurl: "[https://gianluca.statistica.it/slides/XXX](https://gianluca.statistica.it/slides/XXX)"
+slidesurl: 
+   show: false
+   url: "[https://gianluca.statistica.it/slides/XXX](https://gianluca.statistica.it/slides/XXX)"
 thank-you: 
    show: true
    file: phoebe
@@ -54,7 +56,7 @@ date-as-string: '`r ifelse((rmarkdown::metadata$date)!="",(rmarkdown::metadata$d
 shortdate: '`r ifelse((rmarkdown::metadata$date)!="",(rmarkdown::metadata$date |> as.Date(format("%e %B %Y")) |> format("%e %b %Y")),(Sys.Date() |> format("%e %b %Y")))`'
 shorttitle-string: '`r ifelse((rmarkdown::metadata$shorttitle)!="",paste(rmarkdown::metadata$shorttitle,"&nbsp; | &nbsp;"),"")`'
 shortconference-string: '`r ifelse((rmarkdown::metadata$shortconference)!="",paste(rmarkdown::metadata$shortconference,"&nbsp; | &nbsp;"),"")`'
-slides-url: '`r ifelse((rmarkdown::metadata$slidesurl)!="",paste("&nbsp; | &nbsp; {{< fa circle-info >}} Slides available at ",rmarkdown::metadata$slidesurl),"")`'
+slides-url: '`r ifelse((rmarkdown::metadata$slidesurl$show)==TRUE,paste("&nbsp; | &nbsp; {{< fa circle-info >}} Slides available at ",rmarkdown::metadata$slidesurl$url),"")`'
 
 
 #' Format
