Structure slides with extensions for different templates

--- a/inst/quarto/assets/thankyou.qmd
+++ b/inst/quarto/assets/thankyou.qmd
@@ -5,5 +5,5 @@ file=paste0("images/",rmarkdown::metadata$`thank-you`$file,".gif")
 
 <!-- this adds an empty slide with the "Thank you" gif selected in the yml of the talk -->
 # {background-image="`r file`" background="#002248"}
-::: {.footer style="background-color: transparent"}
+::: {.footer style="background-color: transparent!important; background: transparent!important"}
 :::
