--- a/inst/quarto/gb-slides.qmd
+++ b/inst/quarto/gb-slides.qmd
@@ -37,9 +37,9 @@ url:
     icon: '`r fontawesome::fa("firefox",fill="#EA7600",height="0.8em")`'
 github: 
   - text: "[https://github.com/giabaio](https://github.com/giabaio)"
-    icon: '`r fontawesome::fa("github",fill="black",height="0.8em")`'
+    icon: '`r fontawesome::fa("github",fill="#993bff",height="0.8em")`'
   - text: "[https://github.com/StatisticsHealthEconomics](https://github.com/StatisticsHealthEconomics)"
-    icon: '`r fontawesome::fa("github",fill="black",height="0.8em")`'
+    icon: '`r fontawesome::fa("github",fill="#993bff",height="0.8em")`'
 social: 
   - text: '[\@gianlubaio@mas.to](https://mas.to/@gianlubaio)'
     icon: '`r fontawesome::fa("mastodon",fill="#563acc",height="0.8em")`'
@@ -69,47 +69,12 @@ slides-url: |
 
 #' Format
 from: markdown+emoji
-format:
-  revealjs: 
-    template-partials: 
-      - assets/title-slide.html
-    include-in-header: 
-      - assets/latex_macros.html
-    transition: none
-    slide-number: true
-    chalkboard: 
-      buttons: false
-    preview-links: auto
-    theme: assets/gb-ucl-new.scss
-# NB: if using the UCLSans font for the new style, needs to uncomment this
-    css: assets/fonts.css
-# default width/height: 1050/700; can also try 1200/800 but it's a bit narrow...
-    width: 1500 
-    height: 900
-#    margin: 0.05
-#    logo: images/ucl-new-logo.png
-    footer: |
-       &copy; Gianluca Baio (UCL) &nbsp; | &nbsp; [{{< fa brands linkedin >}}](https://www.linkedin.com/in/gianluca-baio/){title='Follow me on LinkedIn'} &nbsp;
-       [{{< fa brands mastodon >}}](https://mas.to/@gianlubaio){title='Follow me on Mastodon'} &nbsp;
-       [{{< fa brands github >}}](https://github.com/giabaio){title='Check out my repos'} &nbsp;
-       [{{< fa envelope >}}](mailto:g.baio@ucl.ac.uk){title='Email me'} &nbsp;
-       [{{< fa brands firefox >}}](https://gianluca.statistica.it){title='Visit my website'} &nbsp; | &nbsp;
-       {{< meta shorttitle-string >}} {{< meta shortconference-string >}} {{< meta shortdate >}} {{< meta slides-url >}}
-       <!-- [{{< fa brands x-twitter >}}](https://twitter.com/giabaio){title='Follow me on X'} &nbsp; -->
+format: ucl-revealjs
 
 #' Filters
 filters:
  - code-visibility
 lightbox: auto
-
-#' Title slide attributes
-title-slide-attributes:
-#    data-background-image: "images/ucl-campus.png"
-    data-background-size: stretch
-    data-background-opacity: "0.08"
-#    data-background-color: "#002248"
-# For the new UCL style uncomment this:
-#    data-background-color: "#361a54"
 
 ---
 
@@ -124,7 +89,7 @@ library(slides)
 source("assets/setup.R")
 ```
 
-## Disclaimer... {transition="convex-in none-out" transition-speed="fast"}
+## Disclaimer... (y) {transition="convex-in none-out" transition-speed="fast"}
 
 ![](images/screenshot.png)
 
@@ -195,623 +160,6 @@ These use the predefined $\rm\LaTeX$ macros, saved in the file [`latex_macros.ht
 `r vspace("2rem")`
 For instance, the command `$\dnorm$` translates to the text Normal (typeset in the current font). But can also use `$\txt{Some text}$`, which gets rendered as $\txt{Some text}$ --- it's like `\text{...}` but with the current font
 
-
-
-## Pretty Code {auto-animate="true"}
-
-(Slide 1)
-
--   Over 20 syntax highlighting themes available
--   Default theme optimized for accessibility
-
-``` r
-# Define a server for the Shiny app
-function(input, output) {
-  
-  # Fill in the spot we created for a plot
-  output$phonePlot <- renderPlot({
-    # Render a barplot
-  })
-}
-```
-
-::: footer
-Learn more: [Syntax Highlighting](https://quarto.org/docs/output-formats/html-code.html#highlighting)
-:::
-
-## Code Animations {auto-animate="true"}
-
-(Slide 2)
-
--   Over 20 syntax highlighting themes available
--   Default theme optimized for accessibility
-
-``` r
-# Define a server for the Shiny app
-function(input, output) {
-  
-  # Fill in the spot we created for a plot
-  output$phonePlot <- renderPlot({
-    # Render a barplot
-    barplot(WorldPhones[,input$region]*1000, 
-            main=input$region,
-            ylab="Number of Telephones",
-            xlab="Year")
-  })
-}
-```
-
-::: footer
-Learn more: [Code Animations](https://quarto.org/docs/presentations/revealjs/advanced.html#code-animations)
-:::
-
-## Line Highlighting
-
--   Highlight specific lines for emphasis
--   Incrementally highlight additional lines
-
-``` {.python code-line-numbers="4-5|7|10"}
-import numpy as np
-import matplotlib.pyplot as plt
-
-r = np.arange(0, 2, 0.01)
-theta = 2 * np.pi * r
-fig, ax = plt.subplots(subplot_kw={'projection': 'polar'})
-ax.plot(theta, r)
-ax.set_rticks([0.5, 1, 1.5, 2])
-ax.grid(True)
-plt.show()
-```
-
-::: footer
-Learn more: [Line Highlighting](https://quarto.org/docs/presentations/revealjs/#line-highlighting)
-:::
-
-## Text formatting
-
-> Blockquote
->
-> More quoted text
-
-## Executable Code
-
-```{r}
-#| echo: true
-#| fig-width: 10
-#| fig-height: 4.5
-library(ggplot2)
-ggplot(mtcars, aes(hp, mpg, color = am)) +
-  geom_point() +  geom_smooth(formula = y ~ x, method = "loess")
-```
-
-::: footer
-Learn more: [Executable Code](https://quarto.org/docs/presentations/revealjs/#executable-code)
-:::
-
-# Section title slide {background-image="https://www.ianvisits.co.uk/articles/wp-content/uploads/2022/11/ucl-observatory-mill-hill-01.jpg" background="#361a54" background-opacity=0.5}
-
-Setting the background colour to a dark colour automatically changes the colour of the text to make it visible over a dark background!
-
-## Code chunk and output side by side  {auto-animate=true}
-
-```{r}
-#| output-location: column-fragment
-#| echo: true
-#| fig-width: 6
-#| fig-height: 4
-
-ggplot(palmerpenguins::penguins, 
-       aes(x = bill_length_mm, 
-           y = bill_depth_mm, 
-           color = species)) +
-  geom_point() +
-  colorblindr::scale_color_OkabeIto()
-```
-
-
-## Code chunk and output side by side {auto-animate=true transition-in="fade" transition-speed="slow"}
-
-```{r}
-#| output-location: column
-#| code-line-numbers: "6"
-#| echo: true
-#| fig-width: 6
-#| fig-height: 4
-
-ggplot(palmerpenguins::penguins, 
-       aes(x = bill_length_mm, 
-           y = bill_depth_mm, 
-           color = species)) + 
-  geom_point() +
-  theme_minimal() +
-  colorblindr::scale_color_OkabeIto()
-```
-
-
-
-## Code chunk and output side by side {auto-animate=true transition-in="fade" transition-speed="slow"}
-
-This time with hidden lines 
-
-```{r}
-#| output-location: column
-#| code-line-numbers: "6"
-#| echo: true
-#| fig-width: 6
-#| fig-height: 4
-
-ggplot(palmerpenguins::penguins, 
-       aes(x = bill_length_mm, 
-           y = bill_depth_mm, 
-           color = species)) + 
-  geom_point() + #| hide_line
-  theme_minimal() +
-  colorblindr::scale_color_OkabeIto()
-```
-
-
-
-
-## LaTeX Equations
-
-See code for creating columns
-
-[MathJax](https://www.mathjax.org/) rendering of equations to HTML
-
-::: columns
-::: {.column width="40%"}
-``` tex
-\begin{gather*}
-a_1=b_1+c_1\\
-a_2=b_2+c_2-d_2+e_2
-\end{gather*}
-
-\begin{align}
-a_{11}& =b_{11}&
-  a_{12}& =b_{12}\\
-a_{21}& =b_{21}&
-  a_{22}& =b_{22}+c_{22}
-\end{align}
-```
-:::
-
-::: {.column width="60%"}
-```{=tex}
-\begin{gather*}
-a_1=b_1+c_1\\
-a_2=b_2+c_2-d_2+e_2
-\end{gather*}
-```
-```{=tex}
-\begin{align}
-a_{11}& =b_{11}&
-  a_{12}& =b_{12}\\
-a_{21}& =b_{21}&
-  a_{22}& =b_{22}+c_{22}
-\end{align}
-```
-:::
-:::
-
-::: footer
-Learn more: [LaTeX Equations](https://quarto.org/docs/authoring/markdown-basics.html#equations)
-:::
-
-## Make all the text smaller{.smaller}
-
-All the text on this slide is smaller. Not entirely sure what the use case is! Maybe long quotes?
-
-*"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."*
-
-## Column Layout
-
-Arrange content into columns of varying widths:
-
-<br>
-
-::: columns
-::: {.column width="35%"}
-#### Motor Trend Car Road Tests
-
-The data was extracted from the 1974 Motor Trend US magazine, and comprises fuel consumption and 10 aspects of automobile design and performance for 32 automobiles.
-:::
-
-::: {.column width="3%"}
-:::
-
-::: {.column width="62%"}
-```{r}
-knitr::kable(head(mtcars)[,c("mpg",	"cyl", "disp", "hp", "wt")])
-```
-:::
-:::
-
-::: footer
-Learn more: [Multiple Columns](https://quarto.org/docs/presentations/revealjs/#multiple-columns)
-:::
-
-## Incremental Lists
-
-Lists can optionally be displayed incrementally:
-
-::: incremental
-1.   First item
-2.   Second item
-3.   Third item
-:::
-
-. . .
-
-<br/> Insert pauses to make other types of content display incrementally.
-
-::: footer
-Learn more: [Incremental Lists](https://quarto.org/docs/presentations/revealjs/#incremental-lists)
-:::
-
-## Fragments
-
-Incremental text display and animation with fragments:
-
-[Extra fragment styling / nesting / ordering options](https://quarto.org/docs/presentations/revealjs/advanced.html#fragment-classes)
-
-<br/>
-
-::: {.fragment .fade-in}
-Fade in
-:::
-
-::: {.fragment .fade-up}
-Slide up while fading in
-:::
-
-::: {.fragment .fade-left}
-Slide left while fading in
-:::
-
-::: {.fragment .fade-in-then-semi-out}
-Fade in then semi out
-:::
-
-. . .
-
-::: {.fragment .strike}
-Strike
-:::
-
-::: {.fragment .highlight-red}
-Highlight red (but green and blue are also built-in)
-:::
-
-. . .
-
-::: {.fragment .highlight-itared}
-Highlight custom colour (defined in `scss` file or can be added on the fly)
-
-````{verbatim}
-```{css}
-#| echo: false
-.reveal .slides section .fragment.highlight-itared {
-  opacity: 1;
-  visibility: inherit;
-}
-.reveal .slides section .fragment.highlight-itared.visible {
-  color: #ce2b37;
-}
-```
-
-::: {.fragment .highlight-itared}
-Text to highlight here...
-:::
-````
-:::
-
-::: footer
-Learn more: [Fragments](https://quarto.org/docs/presentations/revealjs/advanced.html#fragments)
-:::
-
-## Slide Backgrounds {background="#43464B"}
-
-Set the `background` attribute on a slide to change the background color (all CSS color formats are supported).
-
-Different background transitions are available via the `background-transition` option.
-
-::: footer
-Learn more: [Slide Backgrounds](https://quarto.org/docs/presentations/revealjs/#color-backgrounds)
-:::
-
-## Media Backgrounds {background="#43464B" background-image="https://www.ianvisits.co.uk/articles/wp-content/uploads/2022/11/ucl-observatory-mill-hill-01.jpg"}
-
-You can also use the following as a slide background:
-
-- An image: `background-image`
-- A video: `background-video`
-- An iframe: `background-iframe`
-
-::: footer
-Learn more: [Media Backgrounds](https://quarto.org/docs/presentations/revealjs/#image-backgrounds)
-:::
-
-
-## Media Backgrounds with brand colour {background="#002248" background-image="https://www.ianvisits.co.uk/articles/wp-content/uploads/2022/11/ucl-observatory-mill-hill-01.jpg" background-opacity="0.5"}
-
-You can also use the following as a slide background:
-
-- An image: `background-image`
-- A video: `background-video`
-- An iframe: `background-iframe`
-
-::: footer
-Learn more: [Media Backgrounds](https://quarto.org/docs/presentations/revealjs/#image-backgrounds)
-:::
-
-
-## Auto-Animate {auto-animate="true" auto-animate-easing="ease-in-out"}
-
-Auto-animate tries to automatically find the bits to match across slides. To override, see:
-<https://quarto.org/docs/presentations/revealjs/advanced.html#element-matching>
-
-Automatically animate matching elements across slides with Auto-Animate.
-
-::: r-hstack
-::: {data-id="box1" auto-animate-delay="0" style="background: #2780e3; width: 200px; height: 150px; margin: 10px;"}
-:::
-
-::: {data-id="box2" auto-animate-delay="0.1" style="background: #3fb618; width: 200px; height: 150px; margin: 10px;"}
-:::
-
-::: {data-id="box3" auto-animate-delay="0.2" style="background: #e83e8c; width: 200px; height: 150px; margin: 10px;"}
-:::
-:::
-
-::: footer
-Learn more: [Auto-Animate](https://quarto.org/docs/presentations/revealjs/advanced.html#auto-animate)
-:::
-
-## Auto-Animate {auto-animate="true" auto-animate-easing="ease-in-out"}
-
-Automatically animate matching elements across slides with Auto-Animate.
-
-::: r-stack
-::: {data-id="box1" style="background: #2780e3; width: 350px; height: 350px; border-radius: 200px;"}
-:::
-
-::: {data-id="box2" style="background: #3fb618; width: 250px; height: 250px; border-radius: 200px;"}
-:::
-
-::: {data-id="box3" style="background: #e83e8c; width: 150px; height: 150px; border-radius: 200px;"}
-:::
-:::
-
-::: footer
-Learn more: [Auto-Animate](https://quarto.org/docs/presentations/revealjs/advanced.html#auto-animate)
-:::
-
-## Slide Transitions {.smaller}
-
-The next few slides will transition using the `slide` transition
-
-| Transition | Description                                                            |
-|------------|------------------------------------------------------------------------|
-| `none`     | No transition (default, switch instantly)                              |
-| `fade`     | Cross fade                                                             |
-| `slide`    | Slide horizontally                                                     |
-| `convex`   | Slide at a convex angle                                                |
-| `concave`  | Slide at a concave angle                                               |
-| `zoom`     | Scale the incoming slide so it grows in from the center of the screen. |
-
-::: footer
-Learn more: [Slide Transitions](https://quarto.org/docs/presentations/revealjs/advanced.html#slide-transitions)
-:::
-
-## A long, scrollable table 
-### Using `fragments`...
-
-::: {style="height: 80%; overflow: auto; font-size: .65em;"}
-```{r}
-knitr::kable(mtcars)
-```
-:::
-
-## Tabsets {transition="slide" .smaller}
-
-::: panel-tabset
-### Plot
-
-```{r}
-library(ggplot2)
-ggplot(mtcars, aes(hp, mpg, color = am)) +
-  geom_point() +  
-  geom_smooth(formula = y ~ x, method = "loess",
-              colour = samplespace::sample_space_colours$pale_green,
-              fill = samplespace::sample_space_colours$pale_green) +
-  samplespace::theme_sample_space(background = FALSE) +
-  samplespace::scale_colour_sample_space("neg_to_pos", 
-                                         reverse = TRUE, 
-                                         continuous = TRUE)
-```
-
-### Data 
-
-```{r}
-knitr::kable(mtcars)
-```
-
-:::
-
-::: footer
-Learn more: [Tabsets](https://quarto.org/docs/presentations/revealjs/#tabsets)
-:::
-
-## Interactive Slides {.smaller transition="slide"}
-
-Include Jupyter widgets and htmlwidgets in your presentations
-
-```{r}
-#| echo: false
-#| fig-height: 5
-library(leaflet)
-leaflet() %>%
-  addTiles() %>%  # Add default OpenStreetMap map tiles
-  addMarkers(lng=174.768, lat=-36.852, popup="The birthplace of R")
-```
-
-::: footer
-Learn more: [Jupyter widgets](https://quarto.org/docs/interactive/widgets/jupyter.html), [htmlwidgets](https://quarto.org/docs/interactive/widgets/htmlwidgets.html)
-:::
-
-## Interactive Slides {.smaller transition="slide"}
-
-Turn presentations into applications with Observable and Shiny. Use component layout to position inputs and outputs.
-
-```{r}
-ojs_define(actors = data.frame(
-  x = rnorm(100),
-  y = rnorm(100)
-))
-```
-
-```{ojs}
-//| panel: sidebar
-viewof talentWeight = Inputs.range([-2, 2], { value: 0.7, step: 0.01, label: "talent weight" })
-viewof looksWeight = Inputs.range([-2, 2], { value: 0.7, step: 0.01, label: "looks weight" })
-viewof minimum = Inputs.range([-2, 2], { value: 1, step: 0.01, label: "min fame" })
-```
-
-::: footer
-Learn more: [Observable](https://quarto.org/docs/interactive/ojs/), [Shiny](https://quarto.org/docs/interactive/shiny/), [Component Layout](https://quarto.org/docs/interactive/layout.html)
-:::
-
-## Preview Links
-
-Navigate to hyperlinks without disrupting the flow of your presentation.
-
-Use the `preview-links` option to open links in an iframe on top of your slides. Try clicking the link below for a demonstration:
-
-::: {style="text-align: center; margin-top: 1em"}
-[Matplotlib: Visualization with Python](https://matplotlib.org/){preview-link="true" style="text-align: center"}
-:::
-
-::: footer
-Learn more: [Preview Links](https://quarto.org/docs/presentations/revealjs/presenting.html#preview-links)
-:::
-
-## Easy Navigation
-
-::: {style="margin-bottom: 0.9em;"}
-Quickly jump to other parts of your presentation
-:::
-
-::: {layout="[1, 20]"}
-![](https://quarto.org/docs/presentations/revealjs/demo/images/presentation-menu.png){width="41"}
-
-Toggle the slide menu with the menu button (bottom left of slide) to go to other slides and access presentation tools.
-:::
-
-You can also press `m` to toggle the menu open and closed.
-
-::: footer
-Learn more: [Navigation](https://quarto.org/docs/presentations/revealjs/presenting.html#navigation-menu)
-:::
-
-## Chalkboard {chalkboard-buttons="true"}
-
-::: {style="margin-bottom: 0.9em;"}
-Free form drawing and slide annotations
-:::
-
-::: {layout="[1, 20]"}
-![](https://quarto.org/docs/presentations/revealjs/demo/images/presentation-chalkboard.png){width="41"}
-
-Use the chalkboard button at the bottom left of the slide to toggle the chalkboard.
-:::
-
-::: {layout="[1, 20]"}
-![](https://quarto.org/docs/presentations/revealjs/demo/images/presentation-notes-canvas.png){width="41"}
-
-Use the notes canvas button at the bottom left of the slide to toggle drawing on top of the current slide.
-:::
-
-You can also press `b` to toggle the chalkboard or `c` to toggle the notes canvas.
-
-::: footer
-Learn more: [Chalkboard](https://quarto.org/docs/presentations/revealjs/presenting.html#chalkboard)
-:::
-
-## Point of View
-
-Press `o` to toggle overview mode:
-
-![](https://quarto.org/docs/presentations/revealjs/demo/images/overview-mode.png){.border}
-
-Hold down the `Alt` key (or `Ctrl` in Linux) and click on any element to zoom towards it---try it now on this slide.
-
-::: footer
-Learn more: [Overview Mode](https://quarto.org/docs/presentations/revealjs/presenting.html#overview-mode), [Slide Zoom](https://quarto.org/docs/presentations/revealjs/presenting.html#slide-zoom)
-:::
-
-## Speaker View
-
-Press `s` (or use the presentation menu) to open speaker view
-
-![](https://quarto.org/docs/presentations/revealjs/demo/images/speaker-view.png){fig-align="center" style="border: 3px solid #dee2e6;" width="780"}
-
-::: footer
-Learn more: [Speaker View](https://quarto.org/docs/presentations/revealjs/presenting.html#speaker-view)
-:::
-
-## Authoring Tools {.smaller}
-
-Live side-by-side preview for any notebook or text editor including Jupyter and VS Code
-
-::: columns
-::: {.column width="50%"}
-![](https://quarto.org/docs/presentations/revealjs/demo/images/jupyter-edit.png){.border .border-thick}
-:::
-
-::: {.column width="50%"}
-![](https://quarto.org/docs/presentations/revealjs/demo/images/jupyter-preview.png){.border .border-thick}
-:::
-:::
-
-::: footer
-Learn more: [Jupyter](https://quarto.org/docs/tools/jupyter-lab.html), [VS Code](https://quarto.org/docs/tools/vscode.html), [Text Editors](https://quarto.org/docs/tools/text-editors.html)
-:::
-
-## Authoring Tools {.smaller}
-
-RStudio includes an integrated presentation preview pane
-
-![](https://quarto.org/docs/presentations/revealjs/demo/images/rstudio.png){.border width="900"}
-
-::: footer
-Learn more: [RStudio](https://quarto.org/docs/tools/rstudio.html)
-:::
-
-## And More...
-
--   [Touch](https://quarto.org/docs/presentations/revealjs/advanced.html#touch-navigation) optimized (presentations look great on mobile, swipe to navigate slides)
--   [Footer & Logo](https://quarto.org/docs/presentations/revealjs/#footer-logo) (optionally specify custom footer per-slide)
--   [Auto-Slide](https://quarto.org/docs/presentations/revealjs/presenting.html#auto-slide) (step through slides automatically, without any user input)
--   [Multiplex](https://quarto.org/docs/presentations/revealjs/presenting.html#multiplex) (allows your audience to follow the slides of the presentation you are controlling on their own phone, tablet or laptop).
-
-::: footer
-Learn more: [Quarto Presentations](https://quarto.org/docs/presentations/revealjs/)
-:::
-
-
-## Make sure the text fits
-
-::: {.r-fit-text}
-Big Text
-:::
-
-## Make sure images fit in the remainder of the space
-
-Here is an image:
-
-![](https://github.com/cararthompson/tidytuesdays/raw/main/plots/202210_gbbo.png){.r-stretch}
-
-Some text after the image.
 
 <!-- 
    If the meta parameter 'thank-you' is set to "false", this won't show. Can 
