--- a/inst/quarto/gb-slides.qmd
+++ b/inst/quarto/gb-slides.qmd
@@ -70,13 +70,25 @@ slides-url: |
 
 #' Format
 from: markdown+emoji
-format: ucl-revealjs
+#' Here selects the style of the slides; other choices are 'gb-revealjs' or 'sampdoria-revealjs'
+format: 
+  ucl-revealjs:
+#' Here defines the elements of the footer
+    footer: |
+      &copy; Gianluca Baio (UCL) &nbsp; | &nbsp; 
+      [{{< fa brands linkedin >}}](https://www.linkedin.com/in/gianluca-baio/){title='Follow me on LinkedIn'} &nbsp;
+      [{{< fa brands mastodon >}}](https://mas.to/@gianlubaio){title='Follow me on Mastodon'} &nbsp;
+      [{{< fa brands github >}}](https://github.com/giabaio){title='Check out my repos'} &nbsp;
+      [{{< fa envelope >}}](mailto:g.baio@ucl.ac.uk){title='Email me'} &nbsp;
+      [{{< fa brands firefox >}}](https://gianluca.statistica.it){title='Visit my website'} &nbsp; | &nbsp;
+      {{< meta shorttitle-string >}} {{< meta shortconference-string >}} {{< meta shortdate >}} {{< meta slides-url >}}
+      <!-- [{{< fa brands x-twitter >}}](https://twitter.com/giabaio){title='Follow me on X'} &nbsp; -->
+
 
 #' Filters
 filters:
  - code-visibility
 lightbox: auto
-
 ---
 
 ```{r}
